<resources>
    <string name="app_name">Calculadora2</string>
    <string name="ce">CE</string>
    <string name="_5">5</string>
    <string name="igual">=</string>
    <string name="masMenos">+/-</string>
    <string name="_0">0</string>
    <string name="mas">+</string>
    <string name="casiomiprimeracalculadora">CASIOMIPRIMERACALCULADORA</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="menos">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="x">X</string>
    <string name="srcjorge">SRCJORGE</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="divide">÷</string>
    <string name="m">M+</string>
    <string name="casiomiprimeracalculadorahexadecimal">CASIOMIPRIMERACALCULADORAHEXADECIMAL</string>




</resources>
