<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/casiomiprimeracalculadora"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="354dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:editable="false"
        android:text="@string/_0"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/black"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/pantallaSigno"
        android:layout_width="47dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/srcjorge"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pantalla" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="#1B2631"
        android:gravity="center"
        android:stretchColumns="*"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:background="#1B2631  ">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonMC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="memoriaCl"
                android:text="@string/mc"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="memoriaRet"
                android:text="@string/mr"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMmas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="memoriaMas"
                android:text="@string/m"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="divide"
                android:text="@string/divide"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_7"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_8"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_9"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="multiplica"
                android:text="@string/x"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_4"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_5"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_6"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonResta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="resta"
                android:text="@string/menos"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_1"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_2"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="numero"
                android:text="@string/_3"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSuma"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="suma"
                android:text="@string/mas"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="cero"
                android:text="@string/_0"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonPunto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones1"
                android:onClick="punto"
                android:text="."
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSigno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="masMenos"
                android:text="@string/masMenos"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonBorra"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:background="@drawable/botones"
                android:onClick="ce"
                android:text="@string/ce"
                android:textColor="@android:color/holo_purple"
                android:textSize="30sp"
                tools:textColor="@android:color/holo_purple" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/buttonIgual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="4"
                android:background="@drawable/botones"
                android:onClick="calcula"
                android:text="@string/igual"
                android:textColor="@android:color/holo_purple"
                android:textSize="30sp" />

        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>